--- a/create.html
+++ b/create.html
@@ -16,6 +16,17 @@
     <input type="file" id="image" >
     <button id="create_btn" >Create Post</button>
     </div>
+    <div>
+        <h3>delete id</h3>
+        <input type="text" id="delete_id" placeholder="type id to be deleted">
+        <button id="delete_btn" >delete </button>
+    </div>
+    <div>
+        <h3>update caption</h3>
+        <input type="text" id="update_id" placeholder="enter id no to update caption">
+        <input type="text" id="update_caption" placeholder="enter updated caption">
+       <button id="update_btn" >update</button>
+    </div>
 </body>
 </html>
 <script type="module" src="create.js"></script>
